--- a/docs/conf.properties
+++ b/docs/conf.properties
@@ -2,3 +2,6 @@
 imgs_128x128=http://placehold.jp/128x128.png
 imgs_150x150=http://placehold.jp/150x150.png
 imgs_300x128=http://placehold.jp/300x128.png
+imgs_600x330=http://placehold.jp/600x330.png
+imgs_1920x1200=http://placehold.jp/1920x1200.png
+imgs_2480x3508=http://placehold.jp/2480x3508.png
